--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "globals": "^15.14.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
+        "lenis": "^1.3.15",
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
